# discord-compiler-bot

./: .babelrc  .env.example  .eslintrc.json  .gitattributes  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  WandBox.js  index.js  menus.js  package-lock.json  package.json  statistics.js  supportserver.js
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: main.yml  nodejs.yml  publish.yml
commands/: botinfo.js  compile.js  compilers.js  help.js  languages.js  ping.js  servers.js  vote.js
src/: CompilerClient.js  README.md  StatisticsTracking.js  SupportServer.js  bot.js  build.rs  cache.rs  events.rs  index.js  log.js  main.rs
src/apis/: dbl.rs  godbolt.rs  insights.rs  linguist.rs  mod.rs  quick_link.rs  sourcepawn.rs  wandbox.rs
src/boilerplate/: c.rs  cpp.rs  csharp.rs  dart.rs  generator.rs  java.rs  mod.rs  php.rs  sourcepawn.rs
src/commands/: asm.js  asm.rs  asmdoc.rs  blacklist.js  block.rs  botinfo.js  botinfo.rs  cache.rs  compile.js  compile.rs  compilers.js  compilers.rs  cpp.rs  execute.rs  format.rs  formats.rs  heapdump.js  help.js  help.rs  insights.rs  invite.js  invite.rs  languages.js  languages.rs  libraries.rs  mod.rs  ping.rs  servers.js  shards.js  unblacklist.js  unblock.rs
src/commands/utils/: CommandCollection.js  CompilationParser.js  CompilerCommand.js  CompilerCommandMessage.js  MessageRouter.js
src/cppeval/: eval.rs  mod.rs
src/managers/: command.rs  compilation.rs  mod.rs  stats.rs
src/slashcmds/: asm.rs  compile.rs  cpp.rs  diff.rs  diff_msg.rs  format.rs  help.rs  invite.rs  mod.rs  ping.rs
src/stats/: mod.rs  stats.rs  statsmanager.rs  structures.rs
src/tests/: compile.test.js  cpp.rs  godbolt.test.js  messagetimeout.test.js  mod.rs  parser.rs  sourcepawn.rs  wandbox.test.js
src/tests/boilerplate/: cpp.rs  java.rs  mod.rs  sourcepawn.rs
src/utils/: CompilationFixer.js  DiscordMessageMenu.js  Godbolt.js  MemorySweeper.js  MessageTimeout.js  Wandbox.js
src/utils/apis/: CompilationService.js  Godbolt.js  StatisticsTracking.js  Wandbox.js
src/utls/: blocklist.rs  compilation_manager.rs  constants.rs  discordhelpers.rs  mod.rs  parser.rs
src/utls/discordhelpers/: embeds.rs  interactions.rs  menu.rs  mod.rs
