[package]
name = "discord-compiler-bot"
description = "Discord bot to compile your spaghetti code."
version = "3.0.0-rc.1"
authors = ["Michael Flaherty (Headline#9999)"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10" }
dotenv = "0.15.0"
regex = "1"
log = "0.4"
pretty_env_logger = "0.3"
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0.*", features = ["derive"] }

#dbl
dbl-rs = "0.2"
futures-util = "0.3.6"
warp = "0.2"
chrono = "0.4.19"


[dependencies.serenity]
default-features = false
features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils", "rustls_backend"]
git = "https://github.com/Headline/serenity"
branch = "compiler"

[dependencies.wandbox]
version = "0.1"

[dependencies.godbolt]
git = "https://github.com/Headline/godbolt-rs"

[dependencies.serenity_utils]
default-features = false
features = ["rustls_backend"]
git = "https://github.com/Headline/serenity-utils"
branch = "compiler"