[package]
name = "discord-compiler-bot"
description = "Discord bot to compile your spaghetti code."
version = "3.5.1"
authors = ["Michael Flaherty (Headline#9999)"]
edition = "2018"
build = "src/build.rs"

[dev-dependencies]
rusty-hook = "0.11.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
dotenv = "0.15.0"
regex = "1"
log = "0.4"
pretty_env_logger = "0.3"
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
lru-cache = "0.1"
async-trait = "0.1"
content_inspector = "0.2"
shell-words = "0.1"
const_format = "0.2"
lazy_static = "1.4.0"
similar = "2.1.0"
#tests
indoc = "1.0.3"
test-context = "0.1"
#dbl
dbl-rs = "0.3"
futures-util = "0.3.6"
warp = "0.3"
chrono = "0.4.19"


[dependencies.serenity]
version = "=0.11.1"
default-features = false
features = ["collector", "gateway", "builder", "standard_framework", "http", "model", "client", "framework", "utils", "rustls_backend"]

[dependencies.wandbox]
version = "0.1"

[dependencies.godbolt]
git = "https://github.com/Headline/godbolt-rs"
branch = "master"
#path = '../godbolt-rs'
